k8/ingress-with-domain-and-certificate-and-iap.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-world
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
  annotations:
    # create helloworld-ingress-ip first by using the command: gcloud compute addresses create helloworld-ingress-ip --global
    # check created IP by using the command: gcloud compute addresses describe helloworld-ingress-ip --global
    kubernetes.io/ingress.global-static-ip-name: "helloworld-ingress-ip"
    networking.gke.io/managed-certificates: "helloworld-certificate"
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80
